# expense_requisition_app

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
expense_requisition_app/: hooks.py  modules.txt  notifications.py
expense_requisition_app/config/: desktop.py
expense_requisition_app/doctype/expense_requisition/: expense_requisition.json  expense_requisition.py
expense_requisition_app/fixtures/: custom_roles.json  expense_requisition_workflow.json
