[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "expense_requisition_app"
version = "0.0.1"
authors = [
  { name="Manus AI Agent", email="support@example.com" },
]
description = "Custom ERPNext app for managing expense requisitions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/user/expense_requisition_app" # Replace with actual URL if available
"Bug Tracker" = "https://github.com/user/expense_requisition_app/issues" # Replace with actual URL if available

